// Code generated by template. DO NOT EDIT.
syntax = "proto3";

package sellerplacepb;

import "sellerpb.proto";
import "google/api/annotations.proto";

option go_package = "github.com/meesooqa/cheque/api/pb/sellerplacepb";

message Model {
  uint64 id = 1;
  uint64 seller_id = 2;
  string name = 3;
  string address = 4;
  string email = 5;
  sellerpb.Model seller = 6;
}

message GetListRequest {
  int32 page_size = 1;
  int32 page = 2;
  string sort_by = 3;
  string sort_order = 4;
  // filters
  uint64 seller_id = 5;
  string name = 6;
  string address = 7;
  string email = 8;
}

message GetListResponse {
  int64 total = 1;
  repeated Model items = 2;
}

message GetItemRequest {
  uint64 id = 1;
}

message GetItemResponse {
  Model item = 1;
}

message CreateItemRequest {
  Model item = 1;
}

message CreateItemResponse {
  Model item = 1;
}

message UpdateItemRequest {
  uint64 id = 1;
  Model item = 2;
}

message UpdateItemResponse {
  Model item = 1;
}

message DeleteItemRequest {
  uint64 id = 1;
}

message DeleteItemResponse {
}

service ModelService {
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/api/v1/sellerplaces"
    };
  }
  rpc GetItem (GetItemRequest) returns (GetItemResponse) {
    option (google.api.http) = {
      get: "/api/v1/sellerplaces/{id}"
    };
  }
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/sellerplaces"
      body: "item"
    };
  }
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/sellerplaces/{id}"
      body: "item"
      additional_bindings {
        patch: "/api/v1/sellerplaces/{id}"
        body: "item"
      }
    };
  }
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {
    option (google.api.http) = {
      delete: "/api/v1/sellerplaces/{id}"
    };
  }
}
